--- a/index.html
+++ b/index.html
@@ -144,6 +144,16 @@
                         </div>
                     </div>
 
+                    <!-- <div class="main-controls__views element">
+                        <h3>Прибыль от посредника</h3>
+                        <div class="main-controls__item rollforward">
+                            <div class="main-controls__range">
+                                <input type="range" step="1" min="0" max="100" value="0">
+                                <span class="range-value">0%</span>
+                            </div>
+                        </div>
+                    </div> -->
+
                 </div>
                 <div class="main-total">
                     <div class="main-total__items">
